# TwilightEditor

./: .gitignore  CMakeLists.txt  README.md
include/: Twilight Editor.h  checksum.h  config.h.in  converter.h  cxxopts.h  settings.h
source/: Twilight Editor.cpp  checksum.cpp  converter.cpp  settings.cpp
